added a test, command manager registration, newest regular-commands